[project]
name = "certwatch"
version = "0.1.0"
description = "Watch CT logs for certs issued for our domains and diff against a known-good inventory"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic>=2.9",
    "prometheus_client>=0.21",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
certwatch = "certwatch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certwatch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
